--- a/MainPage.html
+++ b/MainPage.html
@@ -11,14 +11,18 @@
         <h1>Card Games</h1>
         <nav>
             <ul>
+                <li><a href="MainPage.html">About</a></li>
                 <li><a href="War-Game.html">War</a></li>
                 <li><a href="Sort-Cards.html">Sort Cards</a></li>
-                <li><a href="About.html">About</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>Popular Card Games</h2>
+        <div class="card-game">
+            <h3>About</h3>
+            <p>Welcome to Card Games, your go-to website for interactive and fun card games. Our mission is to bring the excitement of traditional card games to the digital world, allowing players to enjoy timeless classics wherever they are.</p>
+        </div>
         <div class="card-game">
             <h3>War</h3>
             <p>A simple and fun adaptation of the card game for two players. Each player draws a card, and the player with the highest card wins the round. The goal is to win all the cards.</p>
@@ -27,11 +31,6 @@
             <h3>Sort Cards</h3>
             <p>An interactive web application that allows users to draw cards from a virtual deck and sort them in ascending order.</p>
         </div>
-        
     </main>
-    <footer>
-        &copy; 2024 Card Games. All rights reserved.
-    </footer>
-    
 </body>
 </html>
