--- a/MainPage.html
+++ b/MainPage.html
@@ -14,6 +14,7 @@
                 <li><a href="MainPage.html">About</a></li>
                 <li><a href="War-Game.html">War</a></li>
                 <li><a href="Sort-Cards.html">Sort Cards</a></li>
+                <li><a href="Memory.html">Memory</a></li>
             </ul>
         </nav>
     </header>
@@ -30,6 +31,10 @@
         <div class="card-game">
             <h3>Sort Cards</h3>
             <p>An interactive web application that allows users to draw cards from a virtual deck and sort them in ascending order.</p>
+        </div>
+        <div class="card-game">
+            <h3>Memory</h3>
+            <p>Play this engaging memory game where you find pairs of cards by flipping them. Match pairs of the same rank to win!</p>
         </div>
     </main>
 </body>
