--- a/War-Game.html
+++ b/War-Game.html
@@ -14,7 +14,7 @@
                 <li><a href="MainPage.html">About</a></li>
                 <li><a href="War-Game.html">War</a></li>
                 <li><a href="Sort-Cards.html">Sort Cards</a></li>
-
+                <li><a href="Memory.html">Memory</a></li>
             </ul>
         </nav>
     </header>
@@ -25,6 +25,6 @@
         <div id="computerCard" class="card"></div>
         <div id="result"></div>
     </div>
-    <script src="script.js" nonce=" "></script>
+    <script src="script.js"></script>
 </body>
 </html>
